# alchemists-orbit

./: .dockerignore  .gitignore  AGENTS.md  MEMORY.md  Makefile  README.md  flutter_rust_bridge.yaml
.github/workflows/: ci.yml
maestro/: game_test.yaml
mobile/: README.md  pubspec.yaml
mobile/android/app/src/main/: AndroidManifest.xml
mobile/integration_test/: simple_test.dart
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/src/: api_base_resolver.dart  api_base_resolver_native.dart  api_base_resolver_web.dart
mobile/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
mobile/lib/src/rust/api/: physics.dart  simple.dart
mobile/rust/: Cargo.toml
mobile/rust/src/: frb_generated.rs
mobile/rust/src/api/: mod.rs  physics.rs  simple.rs
mobile/rust_builder/: pubspec.yaml
mobile/rust_builder/android/: build.gradle  settings.gradle
mobile/rust_builder/android/src/main/: AndroidManifest.xml
mobile/rust_builder/ios/: rust_lib_alchemists_orbit.podspec
mobile/rust_builder/linux/: CMakeLists.txt
mobile/rust_builder/macos/: rust_lib_alchemists_orbit.podspec
mobile/rust_builder/windows/: CMakeLists.txt
mobile/test/: bridge_smoke_test.dart  widget_test.dart
rust/: Cargo.toml
rust/api/: Cargo.toml
rust/api-OLD/: Cargo.toml
rust/api-OLD/src/: lib.rs
rust/api/src/: lib.rs
rust/game/: Cargo.toml
rust/game/src/: api_types.rs  lib.rs  world.rs
rust/native/: Cargo.toml
rust/native-OLD/: Cargo.toml
rust/native-OLD/src/: events.rs  lib.rs
rust/native/src/: events.rs  orb.rs  physics.rs
scripts/: bootstrap-dev.sh  build-ios.sh  create-issues.sh
