[package]
name = "rust_lib_alchemists_orbit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
futures = "0.3"

# Link to our workspace crates
alchemists-orbit-native = { path = "../../rust/native" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
