[package]
name = "rust_lib_alchemists_orbit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Link to game crate
domino-game = { path = "../../rust/game" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
